--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
   awesome_dialog: ^3.2.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
